--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="6WeBCtvpUIgV2wosdhKLbkl07r7oBIabNu3abJnpoqY" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,600,700|Playfair+Display:400,700,900" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +24,38 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>CGI</title>
+    <title>CGI Merchant Group</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "url": "http://cgimg.com",
+        "logo": "https://cgi-beta.netlify.com/logo.png",
+        "name": "CGI Merchant Group",
+        "email": "investor@cgimg.com",
+        "legalName": "CGI Merchant Group, LLC",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Miami",
+          "addressRegion": "FL",
+          "postalCode": "33131",
+          "streetAddress": "801 Brickell Avenue, Suite 700"
+        },
+        "sameAs": [
+          "https://www.linkedin.com/company/cgi-merchant-group",
+          "https://www.facebook.com/pages/CGI-Merchant-Group/1407795199437704"
+        ],
+        "contactPoint": [
+          {
+            "@type": "ContactPoint",
+            "telephone": "+1-786-581-4800",
+            "email": "investor@cgimg.com",
+            "url": "https://cgimg.com/contact",
+            "contactType": "customer service"
+          }
+        ]
+      }
+  </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
